--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=8000 ts-node-dev --respawn ./src/bin/www.ts",
-    "dev": "cross-env PORT=8000 nodemon --exec ts-node --files ./src/bin/www.ts"
+    "dev": "cross-env PORT=8000 nodemon --exec ts-node --files ./src/bin/www.ts",
+    "test": "cross-env PORT=8000 TS_NODE_FILES=true NODE_ENV=test mocha -r ts-node/register src/tests/*.spec.ts --exit",
+    "coverage": "nyc --reporter lcov npm run test"
   },
   "keywords": [],
   "author": "",
