--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env PORT=8000 ts-node-dev --respawn ./src/bin/www.ts",
-    "dev": "cross-env PORT=8000 nodemon --exec ts-node --files ./src/bin/www.ts",
-    "test": "cross-env PORT=8000 TS_NODE_FILES=true NODE_ENV=test mocha -r ts-node/register src/tests/*.spec.ts --exit",
+    "start": "cross-env PORT=8000 NODE_ENV=dev ts-node-dev --respawn ./src/bin/www.ts",
+    "dev": "cross-env PORT=8000 NODE_ENV=dev nodemon --exec ts-node --files ./src/bin/www.ts",
+    "test": "cross-env PORT=8000 NODE_ENV=test TS_NODE_FILES=true NODE_ENV=test mocha -r ts-node/register src/tests/*.spec.ts --exit",
     "coverage": "nyc --reporter lcov npm run test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.7.36",
+    "chalk": "^4.1.0",
+    "export-dirs": "^0.2.4",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "http-status-code": "^2.1.0",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "mongoose": "^5.10.9",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.13",
