--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start npm --watch --name danboard-be-ts -- run prod",
-    "prod": "cross-env PORT=8000 NODE_ENV=prod ts-node-dev --respawn ./src/bin/www.ts",
+    "start": "cross-env PORT=8000 NODE_ENV=prod ts-node-dev --respawn ./src/bin/www.ts",
     "dev": "cross-env PORT=8000 NODE_ENV=dev nodemon --exec ts-node --files ./src/bin/www.ts",
     "test": "cross-env PORT=8000 NODE_ENV=test TS_NODE_FILES=true NODE_ENV=test mocha -r ts-node/register src/tests/*.spec.ts --exit",
     "coverage": "nyc --reporter lcov npm run test"
@@ -21,8 +20,7 @@
     "http-errors": "^1.8.0",
     "http-status-code": "^2.1.0",
     "mongoose": "^5.10.9",
-    "morgan": "^1.10.0",
-    "pm2": "^4.5.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.13",
