--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env PORT=8000 NODE_ENV=prod ts-node-dev --respawn ./src/bin/www.ts",
+    "start": "pm2 start npm --watch --name danboard-be-ts -- run prod",
+    "prod": "cross-env PORT=8000 NODE_ENV=prod ts-node-dev --respawn ./src/bin/www.ts",
     "dev": "cross-env PORT=8000 NODE_ENV=dev nodemon --exec ts-node --files ./src/bin/www.ts",
     "test": "cross-env PORT=8000 NODE_ENV=test TS_NODE_FILES=true NODE_ENV=test mocha -r ts-node/register src/tests/*.spec.ts --exit",
     "coverage": "nyc --reporter lcov npm run test"
